[package]
name = "pgmig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19"
postgres-native-tls = "0.5.0"
serde = {version = "1.0", features = ["derive"]}
toml = "0.5"
anyhow = "1.0"
native-tls = "0.2"
home = "0.5"
regex = "1.7"
clap = {version="4.0", features=["derive"]}
sqlparser = "0.30.0"
